syntax = "proto3";

package daemon;

option go_package = "github.com/windmilleng/tilt/proto/;proto";

service Daemon {
    rpc CreateService(Service) returns (CreateServiceReply) {}
    // rpc UpdateService(Service) returns (UpdateServiceReply) {}
    // rpc DeleteService(Service) returns (DeleteServiceReply) {}
    // rpc GetServiceStatus(Service) returns (ServiceStatus) {}
    // rpc ListServices() returns (ListServicesReply) {}
    // rpc WatchService(WatchServiceRequest) returns (WatchServiceReply) {}
}

// Q: Is this sufficient?
// Q: How will we uniquely identify a service?
// ie, what's a service's "name"?
message Service {
    string k8s_yaml = 1;
    //repeated Cmd steps = 2;
}

// message Cmd {
//   string dir = 1;
//   repeated string argv = 2;
// }

// message ServiceStatus {
//   string name = 1;
//   enum Status {
//     RUNNING = 0;
//     ERROR = 1;
//     UPDATING = 2;
//   }
// }

// message ListServicesReply {
//     repeated ServiceStatus statuses = 1;
// }

// message WatchServiceRequest {
//   Service service = 1;
//   repeated Watch watches = 2;
// }

// message WatchConfig {
//   string local_path = 1;
//   string exclude_regex = 2;
//   string remote_path = 3;
// }

message CreateServiceReply {}
// message UpdateServiceReply {}
// message DeleteServiceReply {}
